--- a/app/src/main/res/layout/creatures_added_activity.xml
+++ b/app/src/main/res/layout/creatures_added_activity.xml
@@ -4,4 +4,4 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.creatures.added.CreaturesAddedActivity" />
+    tools:context=".view.creatures.added.CreaturesAddedActivity" />
