--- a/app/src/main/res/layout/creatures_list_fragment.xml
+++ b/app/src/main/res/layout/creatures_list_fragment.xml
@@ -4,4 +4,4 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.creatures.list.CreaturesListFragment" />
+    tools:context=".view.creatures.list.CreaturesListFragment" />
