chore: fix `tools:context` from `CreaturesAddedFragment`

--- a/app/src/main/res/layout/creatures_added_fragment.xml
+++ b/app/src/main/res/layout/creatures_added_fragment.xml
@@ -13,7 +13,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.creatures.list.CreaturesListFragment">
+        tools:context=".view.creatures.list.CreaturesAddedFragment">
 
         <TextView
             android:id="@+id/textView"
