--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,8 +33,8 @@
         android:label="CreaturesViewFragment">
         <argument
             android:name="creatureId"
-            android:defaultValue="0"
-            app:argType="integer" />
+            android:defaultValue="0L"
+            app:argType="long" />
 
         <action
             android:id="@+id/action_creaturesViewFragment_to_creaturesEvolvingFragment"
