--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,6 +8,7 @@
         android:id="@+id/creatures_list_dest"
         android:name="tech.salvatore.livro_android_kotlin_paulo_salvatore.view.creatures.list.CreaturesListFragment"
         android:label="CreaturesListFragment">
+
         <action
             android:id="@+id/creatures_view_action"
             app:destination="@id/creatures_view_dest"
@@ -22,6 +23,7 @@
         android:id="@+id/creatures_choose_dest"
         android:name="tech.salvatore.livro_android_kotlin_paulo_salvatore.view.creatures.choose.CreaturesChooseFragment"
         android:label="CreaturesChooseFragment">
+
         <action
             android:id="@+id/action_creaturesChooseFragment_to_creaturesAddedFragment"
             app:destination="@id/creatures_added_dest" />
@@ -31,9 +33,9 @@
         android:id="@+id/creatures_view_dest"
         android:name="tech.salvatore.livro_android_kotlin_paulo_salvatore.view.creatures.view.CreaturesViewFragment"
         android:label="CreaturesViewFragment">
+
         <argument
-            android:name="creatureId"
-            android:defaultValue="0L"
+            android:name="creatureNumber"
             app:argType="long" />
 
         <action
@@ -44,10 +46,20 @@
     <fragment
         android:id="@+id/creatures_added_dest"
         android:name="tech.salvatore.livro_android_kotlin_paulo_salvatore.view.creatures.added.CreaturesAddedFragment"
-        android:label="CreaturesAddedFragment" />
+        android:label="CreaturesAddedFragment">
+
+        <argument
+            android:name="creatureNumber"
+            app:argType="long" />
+    </fragment>
 
     <fragment
         android:id="@+id/creatures_evolving_dest"
         android:name="tech.salvatore.livro_android_kotlin_paulo_salvatore.view.creatures.evolving.CreaturesEvolvingFragment"
-        android:label="CreaturesEvolvingFragment" />
+        android:label="CreaturesEvolvingFragment">
+
+        <argument
+            android:name="creatureNumber"
+            app:argType="long" />
+    </fragment>
 </navigation>
