--- a/app/src/main/res/layout/creatures_view_fragment.xml
+++ b/app/src/main/res/layout/creatures_view_fragment.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="tech.salvatore.livro_android_kotlin_paulo_salvatore.viewmodel.CreatureViewModel" />
@@ -93,11 +95,11 @@
                 app:layout_constraintTop_toBottomOf="@id/guideline1">
 
                 <TextView
-                    android:fontFamily="@font/saira_400"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="27dp"
                     android:layout_marginLeft="27dp"
+                    android:fontFamily="@font/saira_400"
                     android:text="@{viewModel.creature.name}"
                     android:textColor="#5D414F"
                     android:textSize="18sp"
@@ -109,17 +111,17 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/constraintLayoutTitleSection"
                 android:layout_width="0dp"
-                android:weightSum="2"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/constraintLayoutTitleSection">
 
                 <include
                     android:id="@+id/creatureFeedHint"
                     style="@style/creatures_hint_component"
                     layout="@layout/creatures_hint_component"
+                    android:visibility="@{viewModel.creature.canFeed ? View.VISIBLE : View.GONE}"
                     app:icon='@{@drawable/icon_feed}'
                     app:name='@{"Feed"}'
                     app:value='@{@string/creature_can_feed(viewModel.creature.name)}' />
@@ -128,9 +130,19 @@
                     android:id="@+id/creatureTrainHint"
                     style="@style/creatures_hint_component"
                     layout="@layout/creatures_hint_component"
+                    android:visibility="@{viewModel.creature.canTrain ? View.VISIBLE : View.GONE}"
                     app:icon='@{@drawable/icon_train}'
                     app:name='@{"Train"}'
                     app:value='@{@string/creature_can_train}' />
+
+                <include
+                    android:id="@+id/creatureTrainPlay"
+                    style="@style/creatures_hint_component"
+                    layout="@layout/creatures_hint_component"
+                    android:visibility="@{viewModel.creature.canPlay &amp;&amp; (!viewModel.creature.canFeed || !viewModel.creature.canTrain) ? View.VISIBLE : View.GONE}"
+                    app:icon='@{@drawable/icon_play}'
+                    app:name='@{"Play"}'
+                    app:value='@{@string/creature_can_play(viewModel.creature.name)}' />
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
