--- a/app/src/main/res/layout/creatures_view_fragment.xml
+++ b/app/src/main/res/layout/creatures_view_fragment.xml
@@ -111,6 +111,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
+                android:id="@+id/linearLayoutHints"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -144,6 +145,17 @@
                     app:name='@{"Play"}'
                     app:value='@{@string/creature_can_play(viewModel.creature.name)}' />
             </LinearLayout>
+
+            <ImageView
+                android:layout_width="340dp"
+                android:layout_height="340dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/linearLayoutHints"
+                tools:src="@drawable/icon_humor"
+                app:imageUrl="@{viewModel.creature.imageUrl}"
+                android:contentDescription="@string/creatures_image" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
