--- a/app/src/main/res/layout/creatures_view_fragment.xml
+++ b/app/src/main/res/layout/creatures_view_fragment.xml
@@ -88,6 +88,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayoutTitleSection"
                 style="@style/creatures_background_title_section"
+                android:layout_height="37dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/barrier1">
@@ -178,7 +179,6 @@
                 app:barrierDirection="bottom"
                 app:constraint_referenced_ids="ivCreature" />
 
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayoutLevel"
                 style="@style/creatures_background_title_section"
@@ -235,6 +235,55 @@
                     tools:progress="70" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/barrier5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="bottom"
+                app:constraint_referenced_ids="constraintLayoutLevel" />
+
+            <TableLayout
+                android:id="@+id/tlActions"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:stretchColumns="0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/barrier5">
+
+                <TableRow android:layout_marginTop="8dp">
+
+                    <TextView
+                        android:id="@+id/tvNeedsTitle"
+                        android:layout_marginEnd="2dp"
+                        android:layout_marginRight="2dp"
+                        android:background="#4DFFFFFF"
+                        android:fontFamily="@font/saira_400"
+                        android:paddingStart="18dp"
+                        android:paddingLeft="18dp"
+                        android:paddingTop="10dp"
+                        android:paddingEnd="0dp"
+                        android:paddingRight="0dp"
+                        android:paddingBottom="10dp"
+                        android:text="@string/needs"
+                        android:textColor="#5D414F"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/tvActionsTitle"
+                        android:layout_width="90dp"
+                        android:background="#4DFFFFFF"
+                        android:fontFamily="@font/saira_400"
+                        android:gravity="center"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:text="@string/actions"
+                        android:textColor="#5D414F"
+                        android:textSize="18sp" />
+                </TableRow>
+
+            </TableLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
