--- a/app/src/main/res/layout/creatures_hint_component.xml
+++ b/app/src/main/res/layout/creatures_hint_component.xml
@@ -18,8 +18,7 @@
             type="java.lang.String" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        style="@style/creatures_hint_component">
+    <androidx.constraintlayout.widget.ConstraintLayout style="@style/creatures_hint_component">
 
         <LinearLayout
             android:id="@+id/linearLayoutTextBox"
@@ -36,24 +35,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/linearLayoutIcon"
-            android:layout_width="61dp"
-            android:layout_height="61dp"
-            android:background="@drawable/round_icon_background"
-            android:gravity="center"
+        <include
+            layout="@layout/creatures_action_icon_component"
+            app:icon="@{icon}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/ivIcon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:contentDescription="@{@string/creature_status_preview_name(name)"
-                android:src="@{icon}"
-                tools:src="@drawable/icon_humor" />
-        </LinearLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            app:name="@{name}" />
 
         <TextView
             android:layout_width="0dp"
