--- a/app/src/main/res/drawable/progress_bar_level.xml
+++ b/app/src/main/res/drawable/progress_bar_level.xml
@@ -6,7 +6,7 @@
                 android:width="1dp"
                 android:color="#5D414F" />
 
-            <corners android:radius="4dip" />
+            <corners android:radius="14dip" />
             <solid android:color="#4DFFFFFF" />
         </shape>
     </item>
@@ -14,12 +14,12 @@
     <item
         android:id="@android:id/progress"
         android:bottom="1dp"
-        android:top="1dp"
         android:left="1dp"
-        android:right="1dp">
+        android:right="1dp"
+        android:top="1dp">
         <clip>
             <shape>
-                <corners android:radius="4dip" />
+                <corners android:radius="14dip" />
                 <solid android:color="#12E7A6" />
             </shape>
         </clip>
@@ -28,12 +28,12 @@
     <item
         android:id="@android:id/secondaryProgress"
         android:bottom="1dp"
-        android:top="1dp"
         android:left="1dp"
-        android:right="1dp">
+        android:right="1dp"
+        android:top="1dp">
         <clip>
             <shape android:shape="rectangle">
-                <corners android:radius="4dip" />
+                <corners android:radius="14dip" />
                 <solid android:color="#12E7A6" />
             </shape>
         </clip>
